# subvenia

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml  render.yaml
.github/workflows/: ci.yml
app/: config.py  main.py
app/alerts/: dispatcher.py
app/db/: base.py  models.py  queries.py  session.py
app/enrich/: libreborme.py  service.py  vies.py
app/lib/: cnae_catalog.py  cnae_inferer.py  email_brevo.py  nif_validator.py  pdf_generator.py
app/matching/: analyzer.py  eligibility.py  filter.py  finalidad_classifier.py  scorer_llm.py  service.py
app/sync/: bdns_concesiones.py  bdns_enricher.py  bdns_mappers.py  bdns_puller.py  boe_puller.py  borme_fetcher.py  borme_ingester.py  borme_parser.py  catalogs.py  empresite_sitemap.py  eu_puller.py  runner.py  ted_puller.py  wikidata_puller.py
app/web/: _template_globals.py  rate_limit.py  routes_admin.py  routes_alerts.py  routes_browse.py  routes_cnae.py  routes_empresa.py  routes_enrich.py  routes_legal.py  routes_licitaciones.py  routes_news.py  routes_pricing.py  routes_search.py  routes_seo.py
data/: cnae_2009.json
docs/: LAUNCH_CHECKLIST.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_catalogs.py  0003_alerts_and_outbox.py  0004_empresa.py  0005_empresa_slug_pattern_index.py  0006_empresa_cnae_inferido.py  0007_licitacion.py
scripts/: backfill_borme.py  reclassify_finalidad.py
tests/: conftest.py
tests/integration/: test_search_flow.py
tests/unit/: test_alert_models.py  test_bdns_puller.py  (+31 more)
(+36 files in other folders)
