[project]
name = "subvenciones-app"
version = "0.1.0"
description = "Buscador de subvenciones para empresas españolas"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.2",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.12",
    "google-generativeai>=0.8.3",
    "weasyprint>=63.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "ruff>=0.7.0",
    "httpx>=0.27.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
